--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,17 @@
         <link rel="stylesheet" href="css/estilos.css" /> 
     </head>
     <body>
-        <h1>aqui vamos a hacer un blog post</h1>
-        <p>y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante
+                    del post
+                </h1>
+                <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibes
+                    que se pueden hacer con ramas
+                </p>
+    
+            </div>
+        
+         </div>
     </body>
 </html>
