--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">cabecera</div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante
                     del post
