--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">cabecera</div>
+            <div id="cabecera">
+                Hyperblog <span id="tagline">tu blog de confianza</span>
+            </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante
                     del post
