--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,11 @@
                 <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibes
                     que se pueden hacer con ramas
                 </p>
+                <p>los blogs son la mejor forma de compartir
+                    informacion y tus ideas.
+                    mucho mas que ir a conferencias o salir en youtube. exxcepto si eres un rocktar. pero 
+                    estadisticamente no lo eres...por ahora
+                </p>
     
             </div>
         
