agregue suscripcion ,cambie la cabecera maestra

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">tu blog de confianza</span>
+                Hyperblog <span id="tagline">tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante
@@ -22,6 +22,7 @@
                     mucho mas que ir a conferencias o salir en youtube. exxcepto si eres un rocktar. pero 
                     estadisticamente no lo eres...por ahora
                 </p>
+                <p>suscribete y dale like</p>
     
             </div>
         
