cambie el titulo del blogspot
porque puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            el titulo del post
+            bienvenido a hiperblog
         </title>
         <link rel="stylesheet" href="css/estilos.css" /> 
     </head>
