--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            bienvenido a hiperblog
+            bienvenido a hiperblog 2.0
         </title>
         <link rel="stylesheet" href="css/estilos.css" /> 
     </head>
