--- a/blogpost.html
+++ b/blogpost.html
@@ -1,31 +1,23 @@
 <html>
     <head>
-        <title>
-            bienvenido a hiperblog 2.0
-        </title>
-        <link rel="stylesheet" href="css/estilos.css" /> 
+        <title>Bienvenido a Hyperblog 2.0</title>
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">tu blog de cabezera</span>
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el titulo atractivo e interesante
-                    del post
-                </h1>
-                <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibes
-                    que se pueden hacer con ramas
-                </p>
-                <p>los blogs son la mejor forma de compartir
-                    informacion y tus ideas.
-                    mucho mas que ir a conferencias o salir en youtube. exxcepto si eres un rocktar. pero 
-                    estadisticamente no lo eres...por ahora
-                </p>
-                <p>suscribete y dale like</p>
-    
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas 
+                    increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir 
+                    información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
             </div>
-        
-         </div>
+        </div>
     </body>
 </html>
