--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,8 @@
                 <p>suscribete y dale like</p>
     
             </div>
+	    <div id="footer">
+		    Hecho con amor en platzi.
         
          </div>
     </body>
