cual sera el error?

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,7 +26,8 @@
     
             </div>
 	    <div id="footer">
-		    Hecho con amor en platzi.
+		    Hecho con amor en platzi para el mundo
+		   .
         
          </div>
     </body>
