--- a/blogpost.html
+++ b/blogpost.html
@@ -12,19 +12,16 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas 
-                    increéibles que se pueden hacer con ramas</p>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas 
+                    increibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir 
                     información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
-<<<<<<< HEAD
         </div>
-=======
 	    <div id="footer">
 		    Hecho con amor en platzi.
         
          </div>
->>>>>>> b42e069728b3a9aaf39769eb03c59c1da045c479
     </body>
 </html>
